--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,8 +8,45 @@
     <link rel="stylesheet" href="/styles.css">
   </head>
   <body>
+    <!-- Home Page Before Login! -->
+    <header>
+        <div class="header">
+            <h1> Motion Mentor </h1>
+            <nav>
+                <a href="/home">Home</a>
+                <a href="/login">Login</a>
+                <a href="/register">Register</a>
+            </nav>
+        </div>
+    </header>
 
-    <h1> Home Page Before Login! </h1>
+    <main>
+        <div class="index-container">
+            <div class="index-left">
+                <form action="/login" method="post">
+                    <div class="form-group">
+                        <label for="name">Name:</label>
+                        <input type="text" id="name" name="username" placeholder="Enter your name" required autocomplete="off">
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Password:</label>
+                        <input type="password" id="password" name="password" placeholder="Enter your password" required>
+                    </div>
+                    <button type="submit" class="submit-btn">Login</button>
+                </form>
+                <h4>Not registered? <a href="/register">Create an account</a></h4>
+            </div>
+
+            <div class="index-right">
+                <h1> Welcome to Motion Mentor</h1>
+                <p> Please login to begin tracking your fitness goals. </p>
+
+            </div>
+
+        </div>
+    </main>
+
+
 	<script src="index.js"></script>
   </body>
 </html>
