--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
             <nav>
                 <a href="/home">Home</a>
                 <a href="/login">Login</a>
-                <a href="/register">Register</a>
+                <a href="/signup">Register</a>
             </nav>
         </div>
     </header>
