--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,7 +34,7 @@
                     </div>
                     <button type="submit" class="submit-btn">Login</button>
                 </form>
-                <h4>Not registered? <a href="/register">Create an account</a></h4>
+                <h4>Not registered? <a href="/signup">Create an account</a></h4>
             </div>
 
             <div class="index-right">
