--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,10 +6,101 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Fitness Tracker</title>
     <link rel="stylesheet" href="/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
+    <header>
+      <div class="header">
+          <h1> Motion Mentor </h1>
+          <nav>
+              <a href="/home">Home</a>
+              <a href="/track">Track</a>
+              <a href="/review">Review</a>
+          </nav>
+      </div>
+    </header>
 
-    <h1> Home Page After Login! </h1>
+    <div class="dashboard-container">
+      <div class="dashboard-left">
+        <div class="summary">
+          <div class="summary-card">
+            <div class="weekly">
+              <h1> Weekly Summary </h1>
+              <div class="chart-container">
+                <div class="steps">
+                  <h1 class="chart-image"> 🏃‍♀️ </h1>
+                  <h4> Steps 5000 </h4>
+                </div>
+                <div class="miles">
+                  <h1 class="chart-image"> 🔁 </h1>
+                  <h4> Miles 5000 </h4>
+                </div>
+                <div class="calories">
+                  <h1 class="chart-image"> 🏋️‍♀️ </h1>
+                  <h4> Calories 5000 </h4>
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+      <div class="dashboard-right">
+        <div class="summary">
+          <div class="summary-card">
+            <div class="today">
+              <h1> Today Summary </h1>
+              <div class="chart-container">
+                <div class="steps">
+                  <h1 class="chart-image"> 🏃‍♀️ </h1>
+                  <h4> Steps 5000 </h4>
+                </div>
+                <div class="miles">
+                  <h1 class="chart-image"> 🔁 </h1>
+                  <h4> Miles 5000 </h4>
+                </div>
+                <div class="calories">
+                  <h1 class="chart-image"> 🏋️‍♀️ </h1>
+                  <h4> Calories 5000 </h4>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="dashboard-create">
+        <div class="overview">
+          <div class="overview-card">
+            <div class="card">
+              <h1 class="primary-text"> Overview </h1>
+            </div>
+            <div class="card">
+              <h4 class="text"> Active Minutes 🕣 </h4>
+              <h1 class="subtext"> Pending Results </h1>
+            </div>
+            <div class="card">
+              <h4 class="text"> Heart Rate ♥</h4>
+              <h1 class="subtext"> Pending Results </h1>
+            </div>
+            <div class="card">
+              <h4 class="text"> Water Intake 💧</h4>
+              <h1 class="subtext"> Pending Results </h1>
+            </div>
+            <div class="card">
+              <h4 class="text"> Badges 📛 </h4>
+              <h1 class="subtext"> Pending Results </h1>
+            </div>
+          </div>
+        </div>
+        <div class="create-exercise"></div>
+      </div>
+
+    </div>
+    
+
+
 	<script src="index.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
