--- a/views/home.ejs
+++ b/views/home.ejs
@@ -104,13 +104,13 @@
           <div class="form-group">
             <form>
               <label for="type"> Date </label>
-              <input type="text" class="form-control" id="name" placeholder="Exercise">
+              <input type="text" class="form-control" id="name" placeholder="When?">
               <label for="type"> Type of exercise </label>
               <input type="text" class="form-control" id="name" placeholder="Exercise">
               <label for="type"> Repetitions </label>
-              <input type="number" class="form-control" id="name" placeholder="Exercise">
+              <input type="number" class="form-control" id="name" placeholder="Reps">
               <label for="type"> Duration </label>
-              <input type="number" class="form-control" id="name" placeholder="Exercise">
+              <input type="number" class="form-control" id="name" placeholder="Duration">
             </form>
           </div>
         </div>
@@ -118,29 +118,30 @@
         <div class="edit-log"> 
           <div class="log-name">
             <h4 class="logtext"> Exercise for Today </h4>
-            <table class="table table-striped table-light">
-              <thead>
-                <tr>
-                  <th> Type </th>
-                  <th> Reps </th> 
-                  <th> Duration </th>
-                  <th> Action </th>
-                </tr>
-              </thead>
+            <form action="/" method="POST">
+              <table class="table table-striped table-light">
+                <thead>
+                  <tr>
+                    <th> Type </th>
+                    <th> Reps </th> 
+                    <th> Duration </th>
+                    <th> Action </th>
+                  </tr>
+                </thead>
 
-              <tbody class="log-items">
-                <tr>
-                  <td>Type</td>
-                  <td>15</td>
-                  <td>10</td>
-                  <td>
-                    <a href="" class="btn btn-sm btn-warning logtext edit">Edit</a>
-                    <a href="" class="btn btn-sm btn-warning logtext delete">Delete</a>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-            </tbody>
+                <tbody class="log-items">
+                  <tr>
+                    <td>Type</td>
+                    <td>15</td>
+                    <td>10</td>
+                    <td>
+                      <a href="/edit" class="btn btn-sm btn-warning logtext edit">Edit</a>
+                      <a href="/delete" class="btn btn-sm btn-warning logtext delete">Delete</a>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+            </form>
           </div>
     
 
