--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Fitness Tracker</title>
     <link rel="stylesheet" href="/styles.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
     <header>
@@ -104,7 +104,7 @@
           <div class="form-group">
             <form id="workoutForm">
               <label for="date"> Date </label>
-              <input type="text" class="form-control" id="name" placeholder="When?">
+              <input type="text" class="form-control datepicker" id="name" placeholder="When?">
               <label for="title"> Type of exercise </label>
               <input type="text" class="form-control" id="name" placeholder="Push Ups">
               <label for="reps"> Repetitions </label>
@@ -113,7 +113,7 @@
               <input type="number" class="form-control" id="name" placeholder="Body Weight">
               <label for="sets"> Sets </label>
               <input type="number" class="form-control" id="name" placeholder="3">
-              <button type="submit" id="submitWorkout"> Add </button>
+              <button type="submit" id="workoutForm"> Add </button>
             </form>
           </div>
         </div>
@@ -157,7 +157,11 @@
     
 
 
+   
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+
   <script src="/main.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
